# Tips-and-Tricks-for-Programming-using-Cpp

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md
.github/workflows/: ASCIIChartci.yml  CRPT_CPP.yml  CharacterComparison.yml  CharacterComparison_V1.1.yml  CharacterComparison_V1.2.yml  CharacterComparison_V1.3.yml  ChrComp_V1_Auto_Merge.yml  CompareTwoCharacters_V1.2_WIndows.yml  FourDivisors.yml  Leetcode.yml  Link_Shortner.yml  OracleSQL.yml  SQLRUN.yml  StringConversion_Secret.yml  String_Conversion_10_Threads.yml  charCompAuto_Commit.yml  char_comparison_matrix_strategy.yml  ci-work_app.yml  ci.yml  cleanup-cache.yml  cpp-ci-cd-matrix.yml  cpp-ci-matrix.yml  cpp_leetcode_175.yml  python-ci-.yml  stringconversion_MultiThreaded.yml  sync-forks.yml  workingApp.yml  workingApp_ALl_Platform.yml  workingApp_V1.1.yml  workingApp_V1.2.yml
ARM64/Debug/: SortingMethods.exe.recipe  SortingMethods.ilk  vc143.idb
ASCII/: InputValidation.cpp  InputValidation1.cpp  README.md  performingASCIIcalculations.cpp  performingASCIIcalculations1.cpp  performingASCIIcalculations2.cpp  sortingComparisonOperations.cpp  sortingComparisonOperations1.cpp  sortingComparisonOperations2.cpp
ASCII/ASCIIChart/: README.md  code.cpp
ASCII/CharacterComparison/: README.md
ASCII/InputValidation/: CodeV1.0.1.cpp  CodeV1.0.cpp  CodeV1.1.cpp  README.md
ASCII/KeyboardInputMapping/: README.md
ASCII/PerformingASCIIcalculations/: README.md
ASCII/SortingComparisonOperations/: README.md
ASCII/performingASCIIcalculations/: README.md  codeV1.0.cpp  (+1 more)
Algorithms/: BacktrackingAlgorithm.cpp  BruteForceAlgorithm.cpp  Divide andConquerAlgorithm.cpp  GreedyAlgorithm.cpp  README.md  SearchingAlgorithm.cpp
Array/: README.md  SimpleArray.cpp
Binary Search/: Binary Search to find element.cpp  BinarySearch.cpp  README.md
BinarySearch/: README.md
ClassDiagram/: README.md
CommunityResources/: 20CodingPatterns  20CodingPatterns.md  concurrency.md  dailyhabits.md  impostersyndrome.md  𝗠𝗲𝗺𝗼𝗿𝘆𝗠𝗮𝗻𝗮𝗴𝗲𝗺𝗲𝗻𝘁.cpp
Containerslibrary/: README.MD
DesignPattern/: README.MD  README.md
Forward List/: assign.cpp  clear.cpp  implementation.cpp  insert_after_emplace_after_erase_after.cpp  push_emplace_pop_front.cpp  remove_remove_if.cpp  splice_after.cpp
FunctionOverloading/: README.md
GIT/: README.md
GitHub_Actions/: README.md
Happy Numbers/: README.md  REAMME.md
HappyNumbers/: README.md
Iterators /: README.md  advance.cpp  beginend.cpp  inserter.cpp  nextprev.cpp
Leetcode/: 2614. Prime In Diagonal.cpp  create_structure.sh
Lexicographic Order/: sortingsearchinggeneratingpermutations.cpp
LinkShortener/: README.md  implementation.cpp  implementationV1.1.cpp
List/: KeyMembers.cpp  Middle of the Singly Linked List.cpp  SimpleLinkedList.cpp  creatingInitilizing.cpp  doubly-linked-list.cpp  singlyLinkedList.cpp
Mathematics/: GCD_LCM_two_numbers_V1.2.cpp  GCD_two_numbers.cpp  GCD_two_numbers_V1.1.cpp  LCM_two_numbers_V1.0.cpp  Prime Factorization.cpp  Prime_Factorization_V1.0.cpp  Prime_Factorization_V1.1cpp  Quadratic Equation Solver.cpp  Quadratic_Equation_Solver_V1.0.cpp  Quadratic_Equation_Solver_V1.1.cpp  README.md
OOP/: PPPInheritance.cpp  typesofinheritance 2.cpp
PassBYValueReference/: modifyValues.cpp  modifyValues.py  modifyvalues.cs
PassBYValueReferenceAddress/:  modifyValues.cpp
Queue in C++/: README.md  STL.cpp  StandardQueue.cpp
Recursion/: Print_Decrease_Increase.cpp
SOLID/: README.md
STL/: README.md
StandardLibraryheaders/: README.md
SystemDesign/: README.md
Vector/: Capacity.cpp  Element access.cpp  Iterators.cpp  Modifiers.cpp  README.md
Virtual Functions/: Shape.cpp
Working_Application/String_Conversion/: CMakeLists.txt  CapitalizeWordsConversion.hpp  IStringConversion.hpp  LowerCaseConversion.hpp  README.md  StringConversionTests.cpp  ToggleCaseConversion.hpp  UpperCaseConversion.hpp  helpers.hpp  sourcecode.cpp
Working_Application/String_Conversion/include/: AlternatingCaseConversion.hpp  CapitalizeWordsConversion.hpp  Client.hpp  IStringConversion.hpp  InvertWordsConversion.hpp  KebabCaseConversion.hpp  LeetSpeakConversion.hpp  LowerCaseConversion.hpp  ProcessString.hpp  RemoveSpacesConversion.hpp  RemoveVowelsConversion.hpp  ReverseConversion.hpp  SentenceCaseConversion.hpp  SnakeCaseConversion.hpp  StringConversionFactory.hpp  TestHelpers.hpp  ToggleCaseConversion.hpp  UpperCaseConversion.hpp  helpers.hpp
Working_Application/String_Conversion/src/: AlternatingCaseConversion.cpp  CapitalizeWordsConversion.cpp  Client.cpp  InvertWordsConversion.cpp  KebabCaseConversion.cpp  LeetSpeakConversion.cpp  LowerCaseConversion.cpp  ProcessString.cpp  RemoveSpacesConversion.cpp  RemoveVowelsConversion.cpp  ReverseConversion.cpp  SentenceCaseConversion.cpp  SnakeCaseConversion.cpp  StringConversionFactory.cpp  ToggleCaseConversion.cpp  UpperCaseConversion.cpp  helpers.cpp  sourcecode  sourcecode.cpp
Working_Application/String_Conversion/tests/: AdvancedStringConversionTests.cpp  StringConversionTests.cpp
stack/: README.md
(+554 files in other folders)
